--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jajaperson/aliasify.git"
+    "url": "git+https://github.com/jajaperson/alias-keys.git"
   },
   "keywords": [
     "alias",
@@ -17,7 +17,7 @@
   "author": "James Jensen",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jajaperson/aliasify/issues"
+    "url": "https://github.com/jajaperson/alias-keys/issues"
   },
-  "homepage": "https://github.com/jajaperson/aliasify#readme"
+  "homepage": "https://github.com/jajaperson/alias-keys#readme"
 }
